# tinkoff_invest_app

./: .env_sample  .gitignore  Makefile  docker-compose.yaml  example.env  pyproject.toml
.github/workflows/: ci.yml
http_requests/: http-client.env.json  moex_requests.http  service_api_request.http  t-requests.http
specs/001-application-for-algometric/contracts/: analytics_api.yaml
src/: __init__.py  __main__.py  collections.py  config.py  consts.py  enums.py
src/access_layer/sandbox/: sandbox_db.py
src/algo_trading/: __init__.py  enums.py
src/algo_trading/adapters/: __init__.py  tinkoff_client.py
src/algo_trading/adapters/dto_models/: order_dto.py
src/algo_trading/adapters/models/: __init__.py  common.py  market_data.py  metrics.py  order.py  position.py  session.py  strategy.py
src/algo_trading/adapters/repositories/: __init__.py  order_repository.py  position_repository.py  strategy_repository.py
src/algo_trading/domain/analytics/: __init__.py  performance_calculator.py
src/algo_trading/domain/risk/: __init__.py  monitor.py  risk_evaluator.py
src/algo_trading/domain/strategies/: __init__.py  base.py  mean_reversion.py  momentum.py
src/algo_trading/observability/: __init__.py  health.py  logging.py  metrics.py  tracing.py
src/algo_trading/ports/api/: __init__.py
src/algo_trading/ports/api/v1/: __init__.py  analytics.py  errors.py  orders.py  positions.py  strategies.py
src/algo_trading/ports/api/v1/schemas/: analytics_schema.py  orders_schema.py  positions_schema.py  strategies_schema.py
src/algo_trading/services/: __init__.py  backtest_engine.py  execution.py  market_data.py  order_executor.py  performance_analytics.py  portfolio_analytics.py  scheduled_metrics.py  session_manager.py  strategy_manager.py  trade_analytics.py
src/base/: consts.py
src/base/aiohttp_client/: client.py  client_session.py  config.py
src/base/fastapi_service/: __init__.py  config.py  problem.py  service.py  span_opentelemetry.py  uvicorn_server.py
src/base/mongo_service/: config.py  service.py
src/base/tinkoff_invest/: config.py  service.py
src/entrypoint/api_v1/: routers.py  sandbox.py
src/entrypoint/api_v1/schemas/: response_schemas.py
src/sandbox/: collections.py
src/sandbox/access_layer/sandbox/: account.py
src/sandbox/entrypoint/api_v1/: account.py  routers.py
src/sandbox/entrypoint/api_v1/schemas/: response_schemas.py
src/tinkoff_invest/: client.py  config.py  schemas.py  service.py
tests/: conftest.py  fixtures_db_data.py  test_ap.py  test_app.py
tests/contract/: conftest.py  test_analytics.py  test_backtest.py  test_orders.py  test_positions.py  test_strategies.py  test_strategies_delete.py  test_strategies_get.py  test_strategies_lifecycle.py  test_strategies_post.py  test_strategies_put.py
tests/integration/: test_backtesting.py  test_market_data.py  test_performance_monitoring.py  test_risk_controls.py  test_strategy_deployment.py  test_strategy_execution.py  test_strategy_lifecycle.py
tests/unit/: test_domain_logic.py
