[tool.poetry]
name = "tinkoff_invest_app"
version = "0.1.0"
description = ""
authors = ["sergey <djapy@yandex.ru>"]
readme = "README.md"
package-mode = false


[tool.ruff]
# ignore error # noqa: UP006
target-version = "py310"
line-length = 120
select = ["E", "F", "C", "W", "C90"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.mypy]
plugins = "pydantic.mypy"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
env_files = [".env", ".env.example"]
filterwarnings = ["ignore::DeprecationWarning:distutils"]
asyncio_mode="auto"


[tool.poetry.dependencies]
python = "^3.12"
aiomisc = "^17.9.4"
fastapi = "^0.119.0"
aiohttp = "^3.13.0"
tinkoff-investments = "^0.2.0b117"
uvicorn = "^0.37.0"
opentelemetry-api = "^1.37.0"
opentelemetry-sdk = "^1.37.0"
prometheus-client = "^0.23.1"
instrumental = "^0.5.3"
opentelemetry-instrumentation-fastapi = "^0.58b0"
pydantic = {extras = ["dotenv"], version = "^2.12.0"}
beanie = "^1.30.0"
pydantic-settings = "^2.11.0"
rstr = "^3.2.2"


[tool.poetry.group.dev.dependencies]
Faker = "^18.10.1"
ruff = "^0.0.270"
mypy = "^1.3.0"
isort = "^5.12.0"
bandit = "^1.7.5"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pip-audit = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
